fixed caret window size for collapsed and uncollapsed, added height to let the caret have more clicking space for user

--- a/src/apps/media-2/src/app/components/MediaSidebar.less
+++ b/src/apps/media-2/src/app/components/MediaSidebar.less
@@ -211,7 +211,8 @@
   svg {
     margin-right: 4px;
   }
-  [data-icon="caret-down"] {
+  [data-icon*="caret"] {
+    height: 100%;
     font-size: 16px;
     opacity: 0.6;
   }
